--- a/java-8-lambdas-exercises/pom.xml
+++ b/java-8-lambdas-exercises/pom.xml
@@ -86,6 +86,12 @@
             <version>1.5.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.16</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <properties>
